compiler/testData/diagnostics/tests/traitWithRequired/manyRequirementsDisallowed.kt
open class A
open class B

trait C : <!TRAIT_WITH_SUPERCLASS!>A<!>, <!MANY_CLASSES_IN_SUPERTYPE_LIST!>B<!>